deploy/06-service-serverless-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverless-controller-service
  namespace: serverless-infra
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    name: serverless-controller
  type: LoadBalancer
