deploy/07-route-serverless-controller.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: serverless-controller-route
  namespace: serverless-infra
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: serverless-controller-service
    weight: 100
  wildcardPolicy: None
